# ems

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  binding.gyp  package-lock.json  package.json  pip-test.sh  setup.py
Examples/Interlanguage/: interlanguage.py
Python/: MANIFEST.in  ems.py  setup.py
Tests/: fj_args.py  py_api.py
include/ems/: ems.h  ems_proto.h  ems_win.h
nodejs/: nodejs.cc
scripts/: clear-build.sh  clear-dist.sh  pip-test.sh
src/: collectives.cc  ems.cc  ems_alloc.cc  loops.cc  primitives.cc  rmw.cc
